manifests/tenants/mosaic/conversation_briefing/grpc/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: conversation-briefing-grpc
  namespace: mosaic-conversation-briefing
spec:
  parentRefs:
  - name: mosaic-grpc-gateway
    namespace: mosaic-grpc-gateway
  hostnames:
  - "api.verturus.com"
  rules:
  - matches:
    - method:
        service: conversation_briefing.ConversationBriefingService
    backendRefs:
    - name: conversation-briefing-service
      port: 30030
